Fixed the YT pic connecting with link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <li> Watch YouTube </li>
       <li> Play games </li>
       <li> Sometimes I also work on my game on Roblox Studio
-      <li> Watch movies, my <a href="https://en.wikipedia.org/wiki/Avengers:_Endgame" target="_blank" > favorite movie is this one </li> </ol>  
+      <li> Watch movies, my <a href="https://en.wikipedia.org/wiki/Avengers:_Endgame" target="_blank" > favorite movie is this one </a> </li> 
+    </ol>  
     <img src="https://images.pexels.com/photos/5702341/pexels-photo-5702341.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"  width="100" alt=YouTube image> 
   
   </body>
